--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="humans.anatomy">
+    package="humans3d.visualanatomy">
+
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 <!--    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />-->
 <!--    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />-->
-<!--    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />-->
-<!--    <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />-->
-<!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 <!--    <uses-permission android:name="android.permission.CAMERA" />-->
     <uses-permission android:name="android.webkit.PermissionRequest" />
 <!--    <uses-permission android:name="com.android.vending.BILLING" />-->
@@ -18,7 +19,7 @@
 <!--    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />-->
 <!--    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>-->
 
-    <uses-feature android:name="android.hardware.camera" />
+<!--    <uses-feature android:name="android.hardware.camera" />-->
 
     <queries>
         <intent>
